# elementsFinis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  final.txt  final_2.geo  final_2.msh  first.geo  flat.geo  flat.msh  half_first.geo  half_second.geo  main.cc  main_test.cc  main_test2.cc  mesh.cc  mesh.hh  meshReader  point.hh  quarter_first.geo  quarter_second.geo  second.geo  simple_mesh.geo  simple_mesh.msh  square.msh  test.tri  test.vtk  test.vtu  triangle.cc  triangle.hh
